manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pg-01
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: pg-01
    app.kubernetes.io/part-of: pxbackup-poc
