manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: pg-01
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: pg-01
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: pg-01
  ports:
    - name: pg
      port: 5432
      targetPort: pg
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pg-01
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: pg-01
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: pg-01
    statefulset.kubernetes.io/pod-name: postgres-0
  ports:
    - name: pg
      port: 5432
      targetPort: pg
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: pg-01
  labels:
    app.kubernetes.io/name: adminer
    app.kubernetes.io/instance: pg-01
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adminer
    app.kubernetes.io/instance: pg-01
  ports:
    - name: http
      port: 8080
      targetPort: http
